# minting_v3

./: Cargo.toml  README.md
client/: Cargo.toml  readme.md
client/artifacts/: v131.scale  v141.scale
client/src/: client.rs  dynamic.rs  main.rs  runtimes.rs  types.rs
client/src/runtimes/v115/: types.rs
client/src/runtimes/v123/: types.rs
client/src/runtimes/v131/: runtime.rs  types.rs
client/src/runtimes/v141/: runtime.rs  types.rs
minting/: Cargo.toml  RUNNING.md
minting/src/: main.rs  period.rs  receipt.rs  stellar.rs  types.rs  violation.rs
minting_explorer/: Cargo.toml  package-lock.json  package.json
minting_explorer/minting_ui/: package-lock.json  package.json
minting_explorer/minting_ui/public/: index.html  manifest.json
minting_explorer/minting_ui/src/: App.css  App.js
minting_explorer/src/: main.rs  period.rs  receipt.rs
src/: main.rs  receipt.rs  stellar.rs  types.rs
