[package]
name = "minting_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["openssl"]

[dependencies]
tfchain_client = { path = "../client" }
indicatif = "0.17"
sp-core = "6.0.0"
sp-application-crypto = "6.0.0"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
base64 = "0.13"
bincode = "1.3.3"
stellar-rs = { git = "https://github.com/maximevanhees/stellar-rust-sdk.git", package = "stellar-rs" }
