[package]
name = "minting_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["http2"] }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.2", features = ["cors", "compression-full"] }
rust-embed = "6.3"
mime_guess = "2"
